syntax = "proto3";

package proto;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/xws2021-nistagram/common/proto";

service Content {
  /*    Posts    */
  rpc CreatePost (Post) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/posts",
      body: "*"
    };
  }

  rpc GetAllPostsReduced (EmptyRequestContent) returns (ReducedPostArray) {
    option(google.api.http) = {
      get: "/posts/reduced"
    };
  }

  rpc GetAllPosts (EmptyRequestContent) returns (PostArray) {
    option(google.api.http) = {
      get: "/posts"
    };
  }

  rpc GetPostsForUser (RequestId) returns (PostArray) {
    option(google.api.http) = {
      get: "/posts/user/{id}"
    };
  }

  rpc RemovePost (RequestId) returns (EmptyResponseContent) {
    option(google.api.http) = {
      delete: "/posts/{id}"
    };
  }

  rpc GetPostById (RequestId) returns (Post) {
    option(google.api.http) = {
      get: "/posts/{id}"
    };
  }

  rpc SearchContentByLocation (SearchLocationRequest) returns (PostArray) {
    option(google.api.http) = {
      post: "/location",
      body: "*"
    };
  }

  rpc GetPostsByHashtag (Hashtag) returns (PostArray) {
    option(google.api.http) = {
      post: "/posts-by-hashtag",
      body: "*"
    };
  }

  rpc GetAllHashtags (EmptyRequestContent) returns (Hashtags) {
    option(google.api.http) = {
      get: "/hashtag/get-all",
    };
  }

  /* * * * * * * * * * * * */

  /*    Stories    */
  rpc CreateStory (Story) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/stories",
      body: "*"
    };
  }

  rpc GetAllStories (EmptyRequestContent) returns (StoriesHome) {
    option(google.api.http) = {
      get: "/stories"
    };
  }

  rpc GetStoriesForUser (RequestId) returns (StoriesArray) {
    option(google.api.http) = {
      get: "/stories/user/{id}"
    };
  }

  rpc RemoveStory (RequestId) returns (EmptyResponseContent) {
    option(google.api.http) = {
      delete: "/stories/{id}"
    };
  }

  rpc GetStoryById (RequestId) returns (Story) {
    option(google.api.http) = {
      get: "/stories/{id}"
    };
  }
  /* * * * * * * * * * * * */

  /*    Comments    */
  rpc CreateComment (Comment) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/comments",
      body: "*"
    };
  }

  rpc GetCommentsForPost (RequestId) returns (CommentsArray) {
    option(google.api.http) = {
      get: "/comments/{id}"
    };
  }
  /* * * * * * * * * * * * */

  /* Likes & Dislikes */
  rpc CreateLike (Like) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/likes",
      body: "*"
    };
  }

  rpc GetLikesForPost (RequestId) returns (LikesArray) {
    option(google.api.http) = {
      get: "/likes/{id}"
    };
  }

  rpc GetDislikesForPost (RequestId) returns (LikesArray) {
    option(google.api.http) = {
      get: "/dislikes/{id}"
    };
  }

  rpc GetUserLikedOrDislikedPosts (Like) returns (PostArray) {
    option(google.api.http) = {
      post: "/liked-posts-user",
      body : "*"
    };
  }
  /* * * * * * * * * * * * */

  /* Collections & Favorites */
  rpc GetAllCollections (RequestId) returns (CollectionsArray) {
    option(google.api.http) = {
      get: "/collections/user/{id}"
    };
  }

  rpc GetCollection (RequestId) returns (Collection) {
    option(google.api.http) = {
      get: "/collections/{id}"
    };
  }

  rpc CreateCollection (Collection) returns (Collection) {
    option(google.api.http) = {
      post: "/collections",
      body: "*"
    };
  }

  rpc RemoveCollection (RequestId) returns (EmptyResponseContent) {
    option(google.api.http) = {
      delete: "/collections/{id}"
    };
  }

  rpc GetUserFavorites (RequestId) returns (Favorites) {
    option(google.api.http) = {
      get: "/favorites/{id}"
    };
  }

  rpc CreateFavorite (FavoritesRequest) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/favorites/create",
      body: "*"
    };
  }

  rpc RemoveFavorite (FavoritesRequest) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/favorites/delete",
      body: "*"
    };
  }
  /* * * * * * * * * * * * */

  /* Hashtags */
  rpc CreateHashtag (Hashtag) returns (Hashtag) {
    option(google.api.http) = {
      post: "/hashtag/create",
      body : "*"
    };
  }

  /*   Highlights   */
  rpc GetAllHighlights (RequestId) returns (HighlightsArray) {
    option(google.api.http) = {
      get: "/highlights/user/{id}"
    };
  }

  rpc GetHighlight (RequestId) returns (Highlight) {
    option(google.api.http) = {
      get: "/highlights/{id}"
    };
  }

  rpc CreateHighlight (Highlight) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/highlights",
      body: "*"
    };
  }

  rpc RemoveHighlight (RequestId) returns (EmptyResponseContent) {
    option(google.api.http) = {
      delete: "/highlights/{id}"
    };
  }

  rpc CreateHighlightStory (HighlightRequest) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/highlights/create",
      body: "*"
    };
  }

  rpc RemoveHighlightStory (HighlightRequest) returns (EmptyResponseContent) {
    option(google.api.http) = {
      post: "/highlights/delete",
      body: "*"
    };
  }
  /* * * * * * * * * * * * */
}

/*    Posts    */
message Post {
  string id = 1;
  string userId = 2;
  bool isAd = 3;
  string type = 4;
  string description = 5;
  string location = 6;
  google.protobuf.Timestamp createdAt = 7;
  repeated Media media = 8;
  repeated Comment comments = 9;
  repeated Like likes = 10;
  repeated Like dislikes = 11;
  repeated Hashtag hashtags = 12;
}

// Used for basic preview of posts, comments and likes/dislikes will be fetched on request
message ReducedPost {
  string id = 1;
  string userId = 2;
  bool isAd = 3;
  string type = 4;
  string description = 5;
  string location = 6;
  google.protobuf.Timestamp createdAt = 7;
  repeated Media media = 8;
  int32 commentsNum = 9;
  int32 likesNum = 10;
  int32 dislikesNum = 11;
}

message Media {
  string id = 1;
  string type = 2;
  string postId = 3;
  string content = 4;
  int32 orderNum = 5;
  repeated Tag tags = 6;
}

message Tag {
  string mediaId = 1;
  string userId = 2;
  string username = 3;
}

message Hashtags {
  repeated Hashtag hashtags = 1;
}

message Hashtag {
  string id = 1;
  string text = 2;
}

message ReducedPostArray {
  repeated ReducedPost posts = 1;
}

message PostArray {
  repeated Post posts = 1;
}
/* * * * * * * * * * * * */

/*    Stories    */
message Story {
  string id = 1;
  string userId = 2;
  bool isAd = 3;
  string type = 4;
  string description = 5;
  string location = 6;
  google.protobuf.Timestamp createdAt = 7;
  repeated Media media = 8;
  bool isCloseFriends = 9;
}

message StoriesArray {
  repeated Story stories = 1;
}

message StoryHome {
  string userId = 1;
  string username = 2;
  string userPhoto = 3;
  repeated Story stories = 4;
}

message StoriesHome {
  repeated StoryHome stories = 1;
}

/* * * * * * * * * * * * */

/* Collections & Favorites */
message Collection {
  string id = 1;
  string name = 2;
  string userId = 3;
  repeated ReducedPost posts = 4;
}

message Favorites {
  string userId = 1;
  repeated Collection collections = 2;
  repeated ReducedPost unclassified = 3;
}

message FavoritesRequest {
  string userId = 1;
  string postId = 2;
  string collectionId = 3;
}

message CollectionsArray {
  repeated Collection collections = 1;
}
/* * * * * * * * * * * * */

/*    Likes    */
message Like {
  string postId = 1;
  string userId = 2;
  bool isLike = 3;
  string username = 4;
}

message LikesArray {
  repeated Like likes = 1;
}
/* * * * * * * * * * * * */

/*    Comments    */
message Comment {
  string id = 1;
  string postId = 2;
  string userId = 3;
  string username = 4;
  string content = 5;
  google.protobuf.Timestamp createdAt = 6;
}

message CommentsArray {
  repeated Comment comments = 1;
}
/* * * * * * * * * * * * */

/*    Highlights   */
message Highlight {
  string id = 1;
  string name = 2;
  string userId = 3;
  repeated Story stories = 4;
}

message HighlightsArray {
  repeated Highlight highlights = 1;
}

message HighlightRequest{
  string userId = 1;
  string highlightId = 2;
  string storyId = 3;
}
/* * * * * * * * * * * * */

/*    Multi-usage messages    */
message RequestId {
  string id = 1;
}

message SearchLocationRequest {
  string location = 1;
}

message EmptyRequestContent {}
message EmptyResponseContent {}
/* * * * * * * * * * * * */
